# ceng_odev

./: .gitignore  CMakeLists.txt  README.md  liste.txt
GITHUB_ODEV/: main.py  mainui.py  mainui.ui
GITHUB_ODEV/.qtcreator/Python_3_12_3venv/: pyvenv.cfg
libs/: NotePage.cc
proj/untitled/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.ui
proj/untitled/.cache/clangd/index/: main.cpp.8AA9306616B13273.idx  mainwindow.cpp.4609A7D9111D6689.idx  mainwindow.h.B8E8E27D9E015D44.idx
src/: main.cc
